--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -32,9 +32,8 @@
 			<nav id="navbar" style="margin-bottom: 0px;">
 				<ul>
 					<li>
-					<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
-					alt="Aleph's Website."
-					height="18"></a>
+						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
+								alt="Aleph's Website." height="18"></a>
 					</li>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Artwork</a></li>
@@ -53,15 +52,15 @@
 					<h3>2025 February 03</h3>
 					<ul>
 						<li>Major overhaul of everything, and I do mean everything</li>
-						<li>Site's still under construction so there's practically nothing</li>
+						<strong><li>Site's still under construction so there's practically nothing</li></strong>
 					</ul>
 				</div>
 			</aside>
 			<main>
 				<p>
-				<img src="stuff/grafx/sitegrafx/ucstuf/uc_web.jpg"
-				alt="This website is under construction. Be patient!" /><br>
-				At this rate I'll never be done!
+					<img src="stuff/grafx/sitegrafx/ucstuf/uc_web.jpg"
+						alt="This website is under construction. Be patient!" /><br>
+					At this rate I'll never be done!
 				</p>
 			</main>
 		</div>
@@ -72,8 +71,8 @@
 				Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
 				[berjones] media contents Copyright &copy; 2023-2024 Berayah Jones<br>
 				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
-				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-					title="DMCA.com Protection Status" class="dmca-badge">
+				<a href="https://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+					title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
 					<img src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 						alt="DMCA.com Protection Status" />
 				</a>
