--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -41,6 +41,7 @@
 					<li><a href="#">Videos</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
+					<li><a href="archive/">Archive</a></li>
 				</ul>
 			</nav>
 		</div>
