--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -21,6 +21,8 @@
 	<link rel="canonical" href="https://badbunsen.com/" />
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
