change links, add blah guy

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -34,15 +34,13 @@
 			<nav id="navbar" style="margin-bottom: 0px;">
 				<ul>
 					<li>
-						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
-								alt="Aleph's Website." height="18"></a>
+						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
+								alt="The Blah Guy symbol" height="24"></a>
 					</li>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Artwork</a></li>
+					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Blog</a></li>
-					<li><a href="#">Videos</a></li>
 					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
 					<li><a href="archive/">Archive</a></li>
 				</ul>
 			</nav>
