--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -35,7 +35,7 @@
 				<ul>
 					<li>
 						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-								alt="The Blah Guy symbol" height="24"></a>
+								alt="The Blah Guy symbol" id="navbar_blah"></a>
 					</li>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Portfolio</a></li>
@@ -50,6 +50,10 @@
 			<aside id="leftSidebar" style="margin-right: 0px;">
 				<h2>Updates</h2>
 				<div class="box scroll box_updates">
+					<h3>2025 February 04</h3>
+					<ul>
+						<li><strong>1:56 PM</strong> Can't make up my mind on what's gonna be on here now... maybe a sketchbook full of scraps, a dedicated page for finished works, a directory for old stuff? I need to figure this out... just not now.</li>
+					</ul>
 					<h3>2025 February 03</h3>
 					<ul>
 						<li>Major overhaul of everything, and I do mean everything</li>
@@ -59,9 +63,7 @@
 			</aside>
 			<main>
 				<p>
-					<img src="stuff/grafx/sitegrafx/ucstuf/uc_web.jpg"
-						alt="This website is under construction. Be patient!" /><br>
-					At this rate I'll never be done!
+					Blah blah blah!
 				</p>
 			</main>
 		</div>
