--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -35,7 +35,8 @@
 				<ul>
 					<li>
 						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-								alt="The Blah Guy symbol" id="navbar_blah"></a>
+								alt="The Blah Guy symbol" id="navbar_blah"
+								width="22" height="22"></a>
 					</li>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Portfolio</a></li>
