ANOTHER... UI CHANGE...

--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -21,60 +21,35 @@
 	<link rel="canonical" href="https://badbunsen.com/" />
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
-
+	<link rel="stylesheet" href="stuff/stylesheets/rootindex.css" />
+ 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-
-	<div id="container">
-		<div id="headerArea">
-			<!--<div id="header" style="height: 64px;"></div>
-			note to aleph: add it back when you make a good banner-->
-			<nav id="navbar" style="margin-bottom: 0px;">
-				<ul>
-					<li>
-						<a href="#"><img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-								alt="The Blah Guy symbol" id="navbar_blah"
-								width="22" height="22"></a>
-					</li>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="archive/">Archive</a></li>
-				</ul>
-			</nav>
+	<div class="middleme">
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_blah.svg"
+		width="177" height="177" alt="blah guy">
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/indexlogo_aw.svg"
+		width="177" height="177" alt="blah guy">
+		
+		<div class="navlinks">
+			&#11017; <a href="art.html">art</a><br />
+			&#11017; <a href="video.html">video</a><br />
+			&#11017; <a href="char.html">characters</a><br />
+			&#11017; <a href="blog.html">blog</a><br />
+			&#11017; <a href="bio.html">bio</a><br />
+			&#11017; <a href="appn.html">appendix</a><br />
+			&#11017; <a href="archive/" target="_blank">archive</a>
 		</div>
-
-		<div id="flex">
-			<aside id="leftSidebar" style="margin-right: 0px;">
-				<h2>Updates</h2>
-				<div class="box scroll box_updates">
-					<h3>2025 February 04</h3>
-					<ul>
-						<li><strong>1:56 PM</strong> Can't make up my mind on what's gonna be on here now... maybe a sketchbook full of scraps, a dedicated page for finished works, a directory for old stuff? I need to figure this out... just not now.</li>
-					</ul>
-					<h3>2025 February 03</h3>
-					<ul>
-						<li>Major overhaul of everything, and I do mean everything</li>
-						<strong><li>Site's still under construction so there's practically nothing</li></strong>
-					</ul>
-				</div>
-			</aside>
-			<main>
-				<p>
-					Blah blah blah!
-				</p>
-			</main>
-		</div>
-		<footer id="footer" style="margin-top: 0px;">
+		<div class="copybox">
 			<p class="copyright">
-				<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website."
-					height="24"><br>
-				Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
-				[berjones] media contents Copyright &copy; 2023-2024 Berayah Jones<br>
-				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
+				<strong>all copyright info</strong><br />
+				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023&ndash;2025 Aleph Diallo, unless denoted otherwise. 
+				Media and text contents in the <em>archive</em> subsection &copy; 2023, 2024, 2025 Aleph Diallo, 
+				excluding the <em>[berjones]</em> website's archived media contents &copy; 2021-&ndash;2024 Berayah Jones.<br />
+				All rights reserved.<br />
+				This site is DMCA protected.<br />
 				<a href="https://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 					title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
 					<img src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
@@ -83,13 +58,14 @@
 				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
 			</p>
-		</footer>
+		</div>
 	</div>
+	
 	<!--hcard follies-->
 	<div style="display: none;">
 		<div class="h-card">
 			<!--my persona's pfp-->
-			<img class="u-photo" src="https://badbunsen.com/jan2025/media/clipart/persona/profile_picture.png"
+			<img class="u-photo" src="https://badbunsen.com/archive/2025_01_31/media/clipart/persona/profile_picture.png"
 				alt="An image of my persona">
 			<!--My name and my website (which you're currently viewing)
 				 -->
