--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -48,6 +48,32 @@
 			<strong>neocities</strong> - hosting services 2022 through late 2023<br />
 			<strong>special thanks</strong> - mom & dad for raising me right, dynadot for their cheap domains, berayah jones for being a good pal to work with, macromedia inc for creating flash and fireworks, glitch.me for kickstarting my webdesign journey, wix for serving a similar purpose before glitch.me, deviantart for giving me some interesting ideas, the internet archive for its vast array of software, music & older websites, and linus torvalds for inventing git and making finding old things easier for me.
 		</p>
+		<h2>more detailed copyright info</h2>
+		<p>...in case you really wanted a more detailed description of the way this site is copyrighted, but whatever.</p>
+		<p>
+			<a href="https://badbunsen.com/"
+			target="_blank"><em><img
+			src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
+			alt="aleph's website."
+			height="16"></em></a> 
+			media contents Copyright &copy; 2025 Aleph Diallo unless otherwise noted; code &copy; 2025 Aleph Diallo and licensed under the <a href="https://github.com/badbunsen/badbunsen.github.io">BSD 3-Clause License</a>.<br>
+			<a href="https://badbunsen.com/archive/"
+			target="_blank"><em>
+			Aleph's Website Archive</em></a> 
+			media contents and code Copyright &copy; 2021, 2022, 2023, 2024, 2025 Aleph Diallo, excluding 
+			<a href="archive/blm/"
+			target="_blank"><em>
+			Black Lives Matter project</em></a> 
+			licensed under the public domain and 
+			<a href="archive/berayah/"
+			target="_blank"><em>
+			[berjones]</em></a> media contents &copy; 2021, 2022, 2023, 2024 Berayah Jones. Certain works licensed under the Creative Commons where noted.
+		</p>
+		<p>
+		For contents copyrighted by Aleph Diallo, you are able to utilize anything he owns as long as it is under fair use. 
+		You are not allowed to utilized these works for AI algorithm training or any commerical usage not covered under fair use without contacting Aleph Diallo first.
+		</p>
+		<p><strong>TL;DR</strong>, Don't claim my stuff as your own, give credit where credit is due, and AI is bad. That is all.</p>
 	</div>
 
 	<div class="footer">
