--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -39,15 +39,13 @@
 			&#11017; <a href="char.html">characters</a><br />
 			&#11017; <a href="blog.html">blog</a><br />
 			&#11017; <a href="bio.html">bio</a><br />
-			&#11017; <a href="appn.html">appendix</a><br />
+			&#11017; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
 			&#11017; <a href="archive/" target="_blank">archive</a>
 		</div>
 		<div class="copybox">
 			<p class="copyright">
-				<strong>all copyright info</strong><br />
-				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023&ndash;2025 Aleph Diallo, unless denoted otherwise. 
-				Media and text contents in the <em>archive</em> subsection &copy; 2023, 2024, 2025 Aleph Diallo, 
-				excluding the <em>[berjones]</em> website's archived media contents &copy; 2021-&ndash;2024 Berayah Jones.<br />
+				<strong>copyright info</strong>
+				<em>Aleph's Website</em> media and text contents copyright &copy; 2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. 
 				All rights reserved.<br />
 				This site is DMCA protected.<br />
 				<a href="https://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
