--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -34,13 +34,13 @@
 		width="177" height="177" alt="blah guy">
 		
 		<div class="navlinks">
-			&#11017; <a href="art.html">art</a><br />
-			&#11017; <a href="video.html">video</a><br />
-			&#11017; <a href="char.html">characters</a><br />
-			&#11017; <a href="blog.html">blog</a><br />
-			&#11017; <a href="bio.html">bio</a><br />
-			&#11017; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
-			&#11017; <a href="archive/" target="_blank">archive</a>
+			&#x2196; <a href="art.html">art</a><br />
+			&#x2196; <a href="video.html">video</a><br />
+			&#x2196; <a href="char.html">characters</a><br />
+			&#x2196; <a href="blog.html">blog</a><br />
+			&#x2196; <a href="bio.html">bio</a><br />
+			&#x2196; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
+			&#x2196; <a href="archive/" target="_blank">archive</a>
 		</div>
 		<div class="copybox">
 			<p class="copyright">
