--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -30,7 +30,7 @@
 	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
 	alt="Blah Guy" height="32">
 	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32"><br />
-	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="archive/" target="_blank">archive</a>
+	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
 	</div>
 
 	<div class="main">
@@ -44,7 +44,7 @@
 		<h2>credits</h2>
 		<p>
 			<strong>aleph diallo</strong> - design, code, management<br />
-			<strong>github</strong> - hosting services mid-2023 ownwards<br />
+			<strong>github</strong> - secondary hosting services from 2023-october 2023, primary october 2023 ownwards<br />
 			<strong>neocities</strong> - hosting services 2022 through late 2023<br />
 			<strong>special thanks</strong> - mom & dad for raising me right, dynadot for their cheap domains, berayah jones for being a good pal to work with, macromedia inc for creating flash and fireworks, glitch.me for kickstarting my webdesign journey, wix for serving a similar purpose before glitch.me, deviantart for giving me some interesting ideas, the internet archive for its vast array of software, music & older websites, and linus torvalds for inventing git and making finding old things easier for me.
 		</p>
