--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -4,21 +4,21 @@
 <head>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<title>
-		Title :: Aleph's Website
+		Art :: Aleph's Website
 	</title>
-	<meta name="title" content="Title :: Aleph's Website" />
+	<meta name="title" content="Art :: Aleph's Website" />
 	<meta property="og:site_name" content="Aleph's Website" />
 
-	<meta name="description"
-		content="Description" />
-	<meta property="og:description"
-		content="Description" />
+	<meta name="This is the art section of Aleph's Website, where he shares his... you guessed it!... art."
+		content="This is the art section of Aleph's Website, where he shares his... you guessed it!... art." />
+	<meta property="og:This is the art section of Aleph's Website, where he shares his... you guessed it!... art."
+		content="This is the art section of Aleph's Website, where he shares his... you guessed it!... art." />
 	<meta property="og:type" content="website" />
 
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<link rel="canonical" href="https://badbunsen.com/link" />
+	<link rel="canonical" href="https://badbunsen.com/art.html" />
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
  
@@ -34,7 +34,9 @@
     </div>
 
     <div class="main">
-		content!!!
+		<h1>art section</h1>
+        <p>i'll get it done sooner or later, enjoy this jpeg for now</p>
+        <img src="stuff/artwork/2025/02feb/2025_02_06/alas01.jpg" width="100%">
 	</div>
 
     <div class="footer">
