--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -40,7 +40,7 @@
 			&#x2196; <a href="blog.html">blog</a><br />
 			&#x2196; <a href="bio.html">bio</a><br />
 			&#x2196; <a href="appn.html">appendix</a> (includes detailed &copy; info)<br />
-			&#x2196; <a href="archive/" target="_blank">archive</a>
+			&#x2196; <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
 		</div>
 		<div class="copybox">
 			<p class="copyright">
