--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -21,6 +21,7 @@
 	<link rel="canonical" href="https://badbunsen.com/art.html" />
 
 	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
+	<link rel="stylesheet" href="stuff/stylesheets/art.css" />
  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -35,8 +36,37 @@
 
     <div class="main">
 		<h1>art section</h1>
-        <p>i'll get it done sooner or later, enjoy this jpeg for now</p>
-        <img src="stuff/artwork/2025/02feb/2025_02_06/alas01.jpg" width="100%">
+		<big><big><big><big></big>STILL NOT DONE YET</big></big></big></big>
+        <noscript>This part of the site requires JavaScript, if you don't have it then here's a no-javascript version found here. I don't want everyone being left out!</noscript>
+        <div class="theupperpart clickthru">
+			<div class="pickenchoose"><img src="stuff/spacer.gif" width="1" height="1" alt="Guy saying 'Pick something.'" title="Guy saying 'Pick Something.'" class="clickthru" /></div>
+		</div>
+		<div class="artscroll">
+        <h3>2025</h3>
+        <img 
+		src="stuff/artwork/2025/02feb/2025_02_06/alas01_thumb.png" 
+		alt="Alastor Sketches Thumbnail"
+		class="thumb"
+		onmouseover="this.src = 'stuff/artwork/2025/02feb/2025_02_06/alas02_thumb.png';"
+		onmouseout="this.src = 'stuff/artwork/2025/02feb/2025_02_06/alas01_thumb.png';" />
+        <h3>2024</h3>
+		<img 
+		src="stuff/artwork/2024/05may/2024_05_25/williamandsomeone_thumb.png" 
+		alt="William and Someone Thumbnail"
+		class="thumb"
+		onmouseover="this.src = 'stuff/artwork/2024/05may/2024_05_25/williamandsomeone_thumb_02.png';"
+		onmouseout="this.src = 'stuff/artwork/2024/05may/2024_05_25/williamandsomeone_thumb.png';" />
+        <h3>2023</h3>
+		<img 
+		src="stuff/artwork/2023/08aug/2023_08_01/20230801182749_thumb.gif" 
+		alt="Nelson and Augustus Model Sheets Thumbnail"
+		class="thumb" />
+        <h3>2022</h3>
+        <h3>2021</h3>
+        <h3>2020</h3>
+		<script src="stuff/javascript/art.js">
+		</script>
+        </div>
 	</div>
 
     <div class="footer">
