--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -64,7 +64,7 @@
 		<div class="h-card">
 			<!--my persona's pfp-->
 			<img class="u-photo" src="https://badbunsen.com/archive/2025_01_31/media/clipart/persona/profile_picture.png"
-				alt="An image of my persona">
+				alt="An image of my persona" />
 			<!--My name and my website (which you're currently viewing)
 				 -->
 			<a class="p-name u-url" rel="me" href="https://badbunsen.com/">Aleph Diallo</a>
