add gifs for 01 and 02, they fit quite well

--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -54,7 +54,8 @@
 			hat and trust me... or you can pretend you don't have 
 			any javascript support and feel free to head on into the 
 			noscript version. no pressure.
-			</pre></noscript>
+			</pre>
+		</noscript>
         <div class="theupperpart" id="theupperpart" style="display: none;">
 		<p class="thePreview">
 			<a href="" id="aBiggen" target="_blank">
@@ -90,9 +91,9 @@
 		</div>
 		<div class="artscroll">
         <h3>2025</h3>
-		<img src="stuff/artwork/thumbs/02.png" class="thumb" 
+		<img src="stuff/artwork/thumbs/02.gif" class="thumb" 
 		onclick="art_2(); shutDown();"/>
-		<img src="stuff/artwork/thumbs/01.png" class="thumb" 
+		<img src="stuff/artwork/thumbs/01.gif" class="thumb" 
 		onclick="art_1(); shutDown();"/>
         <h3>2024</h3>
 		<img src="stuff/artwork/thumbs/03.png" class="thumb" 
