fix descriptions, add licenses

--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -75,6 +75,8 @@
 			<strong>Originally uploaded to 
 				<span id="aSite"></span>
 			</strong><br>
+			<strong>License</strong>: 
+			<span id="aLicense"></span>
 			<strong>Tools used</strong>: 
 			<span id="aTools">
 			</span><br>
