noscript version, add scrolling for preview image just in case, etc

--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -38,31 +38,33 @@
 		<h1>art section</h1>
         <noscript>
 			<pre>
-			This part of the site requires JavaScript, 
-			if you don't have it in your browser, or disabled it 
-			for performance reasons, then here's 
-			a noscript version just for you! seriously, take it!
-			<br>
-			<!-- a nice message for those who have javascript 
-			 disabled for "privacy" reasons. looking at you 
-			 stallman.-->
-			however, if you <em>manually</em> disabled it for 
-			privacy reasons, please enable it for this website. 
-			the non free code on this site does not track your 
-			information, it only loads artwork and unloads my works.
-			get your head out of your ass, take off that tinfoil 
-			hat and trust me... or you can pretend you don't have 
-			any javascript support and feel free to head on into the 
-			noscript version. no pressure.
+This part of the site requires JavaScript, 
+if you don't have it in your browser, or disabled it 
+for performance reasons, <a href="noscript/art.html">then here's 
+a noscript version just for you</a>! seriously, take it!
+<br>
+<!-- a nice message for those who have javascript 
+disabled for "privacy" reasons. looking at you 
+stallman.-->
+however, if you <em>manually</em> disabled it for 
+privacy reasons, please enable it for this website. 
+the non free code on this site does not track your 
+information, it only loads artwork and unloads my works.
+get your head out of your ass, take off that tinfoil 
+hat and trust me... or you can pretend you don't have 
+any javascript support <a href="noscript/art.html">and feel free to head on into the 
+noscript version</a>. no pressure.
 			</pre>
 		</noscript>
         <div class="theupperpart" id="theupperpart" style="display: none;">
-		<p class="thePreview">
+		<p class="thePreview"
+			<div class="previewbox">
 			<a href="" id="aBiggen" target="_blank">
 			<img src="" 
 			class="preview" id="aPreview"
 			alt="">
 			</a>
+			</div>
 			<br>
 			<span id="fullimg">Click the image above to zoom in.</span>
 		</p>
