--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -57,16 +57,14 @@ noscript version</a>. no pressure.
 			</pre>
 		</noscript>
         <div class="theupperpart" id="theupperpart" style="display: none;">
-		<p class="thePreview"
 			<div class="previewbox">
-			<a href="" id="aBiggen" target="_blank">
-			<img src="" 
-			class="preview" id="aPreview"
-			alt="">
-			</a>
+					<a href="" id="aBiggen" target="_blank">
+						<img src="" 
+						class="preview" id="aPreview"
+						alt="">
+					</a><br>
 			</div>
-			<br>
-			<span id="fullimg">Click the image above to zoom in.</span>
+			<div id="fullimg">Click the image above to zoom in.</div>
 		</p>
 		<p id="aGo"></p>
 		<p>
