I am the walrus'

--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -71,12 +71,12 @@ noscript version</a>. no pressure.
 			<h3 id="aTitle"></h3>
 			<strong>Date finished</strong>: 
 			<span id="aDate">
-			</span><br>
-			<strong>Originally uploaded to 
+			</span><br style="display: none;">
+			<strong style="display: none;">Originally uploaded to 
 				<span id="aSite"></span>
 			</strong><br>
 			<strong>License</strong>: 
-			<span id="aLicense"></span>
+			<span id="aLicense"></span><br>
 			<strong>Tools used</strong>: 
 			<span id="aTools">
 			</span><br>
@@ -93,12 +93,14 @@ noscript version</a>. no pressure.
 		</div>
 		<div class="artscroll">
         <h3>2025</h3>
+		<img src="stuff/artwork/thumbs/11.gif" class="thumb" 
+		onclick="art_11(); shutDown();"/>
 		<img src="stuff/artwork/thumbs/02.gif" class="thumb" 
 		onclick="art_2(); shutDown();"/>
 		<img src="stuff/artwork/thumbs/01.gif" class="thumb" 
 		onclick="art_1(); shutDown();"/>
         <h3>2024</h3>
-		<img src="stuff/artwork/thumbs/03.png" class="thumb" 
+		<img src="stuff/artwork/thumbs/03.gif" class="thumb" 
 		onclick="art_3(); shutDown();"/>
 		<h3>2023</h3>
 		<img src="stuff/artwork/thumbs/08.gif" class="thumb" 
