--- a/sitedir/noscript/art.html
+++ b/sitedir/noscript/art.html
@@ -8,10 +8,10 @@
 <body>
 <p align="right"><iframe src="../stuff/grafx/sitegrafx/gifs/sphere_lq.gif" name="theframe" width="360" height="360" align="right">Nada frames!</iframe></p>
 <h1>2025</h1>
-<a href="../stuff/artwork/01.jpg" target="theframe"><img src="../stuff/artwork/thumbs/01.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/02.jpg" target="theframe">
+<a href="../stuff/artwork/11.png" target="theframe"><img src="../stuff/artwork/thumbs/11.gif" width="64" height="64" border="0"> <img src="../stuff/artwork/thumbs/01.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/02.jpg" target="theframe">
 <img src="../stuff/artwork/thumbs/02.gif" width="64" height="64" border="0"></a>
 <h1>2024</h1>
-<a href="../stuff/artwork/03.png" target="theframe"><img src="../stuff/artwork/thumbs/03.png" width="64" height="64" border="0"></a>
+<a href="../stuff/artwork/03.png" target="theframe"><img src="../stuff/artwork/thumbs/03.gif" width="64" height="64" border="0"></a>
 <h1>2023</h1>
 <a href="../stuff/artwork/04.jpg" target="theframe"><img src="../stuff/artwork/thumbs/04.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/05.jpg" target="theframe"><img src="../stuff/artwork/thumbs/05.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/06.jpg" target="theframe"><img src="../stuff/artwork/thumbs/06.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/07.jpg" target="theframe"><img src="../stuff/artwork/thumbs/07.gif" width="64" height="64" border="0"></a><a href="../stuff/artwork/08.jpg" target="theframe"><img src="../stuff/artwork/thumbs/08.gif" width="64" height="64" border="0"></a>
 <h1>2022</h1>
