--- a/sitedir/char.html
+++ b/sitedir/char.html
@@ -37,28 +37,28 @@
 	<p>You won't be able to view their pages... yet, but for now this is what I have.</p>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/adam.png" alt="Adam" width="120" height="120"><br>
-		Adam Wellington
+		Adam W.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/nelson.png" alt="Nelson" width="120" height="120"><br>
-		Nelson
+		Nelson D.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/mobot.png" alt="Mobot" width="120" height="120"><br>
-		Mobot the Robot
+		Mobot
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/charles.png" alt="Charles" width="120" height="120"><br>
-		Charles Thoburn
+		Charles T.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/augustus.png" alt="Augustus" width="120" height="120"><br>
-		Augustus Lastname
+		Augustus L.
 		</div>
 		<div style="display: inline-block; width: 260px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/alastor_pt1.png" alt="Alastor" width="120" height="120">
 		<img src="stuff/artwork/characterthumbs/alastor_pt2.png" alt="Alastor" width="120" height="120"><br>
-		Alastor
+		Alastor B.
 		</div>
 	</div>
 
