copyright info, fix br end tags, etc.

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -28,27 +28,28 @@
 <body>
 	<div class="header">
 	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-	alt="Blah Guy" height="32">
-	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32"><br />
+	alt="Blah Guy" height="32" />
+	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
 	</div>
 
 	<div class="main">
 		<h1>appendix</h1>
-		<h2>tools of the trade</h2>
+		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
+		<h2 id="tott">tools of the trade</h2>
 		<p>
-			Here's what I use to do artwork and pretty much anything else.<br>
+			Here's what I use to do artwork and pretty much anything else.<br />
 			Krita and Inkscape, a Huion HS610 screenless drawing tablet, pencils and paper.<br />
 			I'll probably add an image at some point, just not now
 		</p>
-		<h2>credits</h2>
+		<h2 id="cred">credits</h2>
 		<p>
 			<strong>aleph diallo</strong> - design, code, management<br />
 			<strong>github</strong> - secondary hosting services from 2023-october 2023, primary october 2023 ownwards<br />
 			<strong>neocities</strong> - hosting services 2022 through late 2023<br />
 			<strong>special thanks</strong> - mom & dad for raising me right, dynadot for their cheap domains, berayah jones for being a good pal to work with, macromedia inc for creating flash and fireworks, glitch.me for kickstarting my webdesign journey, wix for serving a similar purpose before glitch.me, deviantart for giving me some interesting ideas, the internet archive for its vast array of software, music & older websites, and linus torvalds for inventing git and making finding old things easier for me.
 		</p>
-		<h2>more detailed copyright info</h2>
+		<h2 id="copyright">more detailed copyright info</h2>
 		<p>...in case you really wanted a more detailed description of the way this site is copyrighted, but whatever.</p>
 		<p>
 			<a href="https://badbunsen.com/"
@@ -56,7 +57,7 @@
 			src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg"
 			alt="aleph's website."
 			height="16"></em></a> 
-			media contents Copyright &copy; 2025 Aleph Diallo unless otherwise noted; code &copy; 2025 Aleph Diallo and licensed under the <a href="https://github.com/badbunsen/badbunsen.github.io">BSD 3-Clause License</a>.<br>
+			media contents Copyright &copy; 2025 Aleph Diallo unless otherwise noted; code &copy; 2025 Aleph Diallo and licensed under the <a href="https://github.com/badbunsen/badbunsen.github.io">BSD 3-Clause License</a>.<br />
 			<a href="https://badbunsen.com/archive/"
 			target="_blank"><em>
 			Aleph's Website Archive</em></a> 
@@ -70,10 +71,16 @@
 			[berjones]</em></a> media contents &copy; 2021, 2022, 2023, 2024 Berayah Jones. Certain works licensed under the Creative Commons where noted.
 		</p>
 		<p>
-		For contents copyrighted by Aleph Diallo, you are able to utilize anything he owns as long as it is under fair use. 
-		You are not allowed to utilized these works for AI algorithm training or any commerical usage not covered under fair use without contacting Aleph Diallo first.
+		<strong>Licensing info</strong>: For media contents copyrighted by Aleph Diallo, you are able to utilize them for fair use purposes, including but not limited to video essays, memes, YouTube Poops, parodies, lampooning and documentaries, as long as the intent isn't to just show the original piece and not alter it until it can be deemed fair use.
+		You are not allowed to utilized these works to train generative artificial intelligence software (e.g. craiyon, midjourney, luma.ai), claim as your own or repost. If you do plan to repost, you must do so with the original signatures and watermarks intact, credit Aleph Diallo as the creator & link to his social media accounts and/or make it clear
+		that it is not for monetary gain or solely for fame. This is so original images can be easily retraced back to Aleph Diallo's accounts or badbunsen.com.
+		<br />
+		Sometime in the future, you may be able to request original art files for merchandising licenses to place his artwork on products such as T-shirts, stickers, and pins. 
+		Currently, this is not a possibility for him, so for the time being you cannot resell these works at all. Sorry.
+		<br />
+		<br />
+		<strong>TL:DR;</strong> <strong style="color: #f00"><em>DON'T</em></strong> steal, sell, repost or train AI using my works. <strong style="color: #0f0"><em>DO</em></strong> repost linking back to my accounts and/or ask permission, use my works within fair use laws and request me if you want to use my works for merchandise (which, at the moment, is not possible).
 		</p>
-		<p><strong>TL;DR</strong>, Don't claim my stuff as your own, give credit where credit is due, and AI is bad. That is all.</p>
 	</div>
 
 	<div class="footer">
