--- a/sitedir/art.html
+++ b/sitedir/art.html
@@ -28,9 +28,9 @@
 
 <body>
     <div class="header">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-    alt="Blah Guy" height="32">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32"><br />
+	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
+	alt="Blah Guy" height="32" />
+	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
@@ -42,7 +42,7 @@ This part of the site requires JavaScript,
 if you don't have it in your browser, or disabled it 
 for performance reasons, <a href="noscript/art.html">then here's 
 a noscript version just for you</a>! seriously, take it!
-<br>
+<br />
 <!-- a nice message for those who have javascript 
 disabled for "privacy" reasons. looking at you 
 stallman.-->
@@ -62,7 +62,7 @@ noscript version</a>. no pressure.
 						<img src="" 
 						class="preview" id="aPreview"
 						alt="">
-					</a><br>
+					</a><br />
 			</div>
 			<div id="fullimg">Click the image above to zoom in.</div>
 		</p>
@@ -74,12 +74,12 @@ noscript version</a>. no pressure.
 			</span><br style="display: none;">
 			<strong style="display: none;">Originally uploaded to 
 				<span id="aSite"></span>
-			</strong><br>
+			</strong><br />
 			<strong>License</strong>: 
-			<span id="aLicense"></span><br>
+			<span id="aLicense"></span><br />
 			<strong>Tools used</strong>: 
 			<span id="aTools">
-			</span><br>
+			</span><br />
 			<strong>Description</strong>: 
 			<span id="aDesc">
 			</span>
