--- a/sitedir/char.html
+++ b/sitedir/char.html
@@ -27,37 +27,37 @@
 
 <body>
     <div class="header">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-    alt="Blah Guy" height="32">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32"><br />
+ 	<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
+	alt="Blah Guy" height="32" />
+	<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
 	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main">
 	<p>You won't be able to view their pages... yet, but for now this is what I have.</p>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
-		<img src="stuff/artwork/characterthumbs/adam.png" alt="Adam" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/adam.png" alt="Adam" width="120" height="120"><br />
 		Adam W.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
-		<img src="stuff/artwork/characterthumbs/nelson.png" alt="Nelson" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/nelson.png" alt="Nelson" width="120" height="120"><br />
 		Nelson D.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
-		<img src="stuff/artwork/characterthumbs/mobot.png" alt="Mobot" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/mobot.png" alt="Mobot" width="120" height="120"><br />
 		Mobot
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
-		<img src="stuff/artwork/characterthumbs/charles.png" alt="Charles" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/charles.png" alt="Charles" width="120" height="120"><br />
 		Charles T.
 		</div>
 		<div style="display: inline-block; width: 120px; height: auto; text-align: center;">
-		<img src="stuff/artwork/characterthumbs/augustus.png" alt="Augustus" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/augustus.png" alt="Augustus" width="120" height="120"><br />
 		Augustus L.
 		</div>
 		<div style="display: inline-block; width: 260px; height: auto; text-align: center;">
 		<img src="stuff/artwork/characterthumbs/alastor_pt1.png" alt="Alastor" width="120" height="120">
-		<img src="stuff/artwork/characterthumbs/alastor_pt2.png" alt="Alastor" width="120" height="120"><br>
+		<img src="stuff/artwork/characterthumbs/alastor_pt2.png" alt="Alastor" width="120" height="120"><br />
 		Alastor B.
 		</div>
 	</div>
