almost forgot the template + dmca on index.html

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -86,13 +86,12 @@
 	<div class="footer">
 		<strong>copyright info</strong> &mdash;
 		<em>Aleph's Website</em> media contents and text copyright &copy; 2025 Aleph Diallo, unless denoted otherwise. 
-		All rights reserved.<br />
-		<a href="https://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+		All rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 			title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
-			<img src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+			<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
 				alt="DMCA.com Protection Status" />
 		</a>
-		<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
+		<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
 		</script>
 	</div>
 
