--- a/template.html
+++ b/template.html
@@ -27,28 +27,27 @@
 
 <body>
     <div class="header">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
-    alt="Blah Guy" height="32">
-    <img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32"><br />
-	<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/blah_white.svg"
+		alt="Blah Guy" height="32" />
+		<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" height="32" /><br />
+		<a href="index.html">home</a> | <a href="art.html">art</a> | <a href="video.html">video</a> | <a href="char.html">characters</a> | <a href="blog.html">blog</a> | <a href="bio.html">bio</a> | <a href="appn.html">appendix</a> | <a href="https://badbunsen.github.io/archive/" target="_blank">archive</a>
     </div>
 
     <div class="main">
 		content!!!
 	</div>
 
-    <div class="footer">
-        <strong>copyright info</strong> &mdash;
-        <em>Aleph's Website</em> media contents and text copyright &copy; 2025 Aleph Diallo, unless denoted otherwise. 
-        All rights reserved.<br />
-        <a href="https://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-            title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
-            <img src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-                alt="DMCA.com Protection Status" />
-        </a>
-        <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
-        </script>
-    </div>
+	<div class="footer">
+		<strong>copyright info</strong> &mdash;
+		<em>Aleph's Website</em> media contents and text copyright &copy; 2025 Aleph Diallo, unless denoted otherwise. 
+		All rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+			title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
+			<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+				alt="DMCA.com Protection Status" />
+		</a>
+		<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
+		</script>
+	</div>
 
 	<div class="footerspace"></div>
 </body>
